<resources>
    <string name="app_name">패푸</string>
    <string name="tab_1">햄버거</string>
    <string name="tab_2">치킨</string>
    <string name="tab_3">피자</string>
    <string name="tab_4">분식</string>
    <string name="tab_5">카페</string>
    <string name="tab_6">기타</string>
    <string name="home">패푸</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>

</resources>